<resources>
    <string name="app_name">"           ConverPower"</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_signo">-/+</string>
    <string name="_0">0</string>
    <string name="_punto">.</string>
    <string name="_1_mw_0_dbm">1 mW  =  0 dBm</string>
    <string name="formula">TODO</string>
    <string name="dbm">dBm</string>
    <string name="_borrar">C</string>
    <string name="_0_dbm_1_mw">0 dBm  =  1 mW</string>
    <string name="dbm_a_w">dBm a W</string>
    <string name="w_a_dbm">W a dBm</string>

</resources>
