<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.w_AdBm">

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/_0_dbm_1_mw"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <ImageView
        android:id="@+id/image_formula"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:paddingTop="10dp"
        android:src="@drawable/w_a_dbm" />

    <TextView
        android:id="@+id/entrada_w"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/salida_dbm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="40dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_7"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_8"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_9"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_4"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_5"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_6"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_1"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_2"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_3"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_0"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_punto"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_punto"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_borrar"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_borrar"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_pico"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" pico "
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_nano"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" nano "
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_micro"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="micro"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_mili"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mili"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_watio"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="W"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_kilo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kilo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>